changed to correlation similarity, removed scaling since it's not necessary

--- a/metabolomic_analyses/Metabolomics_clustering.Rmd
+++ b/metabolomic_analyses/Metabolomics_clustering.Rmd
@@ -13,12 +13,11 @@ First, load the functions that will provide the data:
 source('http://s3.amazonaws.com/openfmri/ds031/timeseries_analyses/load_myconnectome_data.R')
 ```
 
-Load and scale the data:
+Load the data:
 
 ```{r}
 metab=load_metab_data(use_clustered_data=FALSE)
 metab$date=NULL
-metab=scale(metab)
 ```
 
 The annotation tool that we will use requires PubChem IDs, so load those:
@@ -32,7 +31,7 @@ Set up the clustering tool:
 
 ```{r}
 library(apcluster)
-sim=negDistMat()
+sim=corSimMat()
 ```
 
 Run the clustering:
@@ -46,7 +45,7 @@ ap
 Save the clustering data and pubchem IDs for each cluster, for later use in annotation with Impala (set save_data=TRUE and change directory location to enable this)
 
 ```{r}
-save_data=FALSE
+save_data=TRUE
 if (save_data) {
   for (i in 1:length(ap@clusters)) {
     print(i)
