added kable wrapper, added full metabolomics

--- a/timeseries_analyses/timeseries_analyses.Rmd
+++ b/timeseries_analyses/timeseries_analyses.Rmd
@@ -19,6 +19,13 @@ source('est_bivariate_arima_model.R')
 
 ```
 
+Make a wrapper for kable that can detect empty datasets
+
+```{r}
+kable_wrap = function(data) {
+  if (nrow(data)>0) {kable(data)}
+}
+```
 If you would like your results to be put into a specific place, then set the variable OUTPUT_DIR to that value.  This puts them in a specific place on my computer.
 
 ```{r}
@@ -53,6 +60,8 @@ fd=load_fd_data()
 food=load_food_data()
 rnaseq_wgcna=load_rnaseq_data(limit_ME_to_enriched=TRUE)
 metab=load_metab_data()
+metab_full=load_metab_data(use_clustered_data=FALSE)
+
 immport=load_ImmPort_data()
 
 ```
@@ -86,7 +95,7 @@ out.dat.behav_behav=est_bivariate_arima_model(behav_keep, behav_keep,spacing='1 
 ```
 
 ```{r  results="asis"}
-kable(out.dat.behav_behav[out.dat.behav_behav$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.behav_behav[out.dat.behav_behav$pval_bh<fdr_thresh,])
 write.table(out.dat.behav_behav,file=paste(OUTPUT_DIR,'out.dat.behav_behav.txt',sep='/'))
 ```
 
@@ -97,7 +106,7 @@ out.dat.wincorr_behav=est_bivariate_arima_model(wincorr,behav_keep)
 ```
 
 ```{r  results="asis"}
-kable(out.dat.wincorr_behav[out.dat.wincorr_behav$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.wincorr_behav[out.dat.wincorr_behav$pval_bh<fdr_thresh,])
 write.table(out.dat.wincorr_behav,file=paste(OUTPUT_DIR,'out.dat.wincorr_behav.txt',sep='/'))
 ```
 
@@ -110,7 +119,7 @@ out.dat.wgcna_behav=est_bivariate_arima_model(rnaseq_wgcna,behav_keep_no_tth,spa
 
 
 ```{r  results="asis"}
-kable(out.dat.wgcna_behav[out.dat.wgcna_behav$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.wgcna_behav[out.dat.wgcna_behav$pval_bh<fdr_thresh,])
 write.table(out.dat.wgcna_behav,file=paste(OUTPUT_DIR,'out.dat.wgcna_behav.txt',sep='/'))
 
 ```
@@ -122,7 +131,7 @@ out.dat.wgcna_wincorr=est_bivariate_arima_model(rnaseq_wgcna,wincorr,spacing='1 
 ```
 
 ```{r  results="asis"}
-kable(out.dat.wgcna_wincorr[out.dat.wgcna_wincorr$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.wgcna_wincorr[out.dat.wgcna_wincorr$pval_bh<fdr_thresh,])
 write.table(out.dat.wgcna_wincorr,file=paste(OUTPUT_DIR,'out.dat.wgcna_wincorr.txt',sep='/'))
 ```
 
@@ -135,7 +144,7 @@ out.dat.immport_behav=est_bivariate_arima_model(immport,behav_keep_no_tth,spacin
 ```
 
 ```{r  results="asis"}
-kable(out.dat.immport_behav[out.dat.immport_behav$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.immport_behav[out.dat.immport_behav$pval_bh<fdr_thresh,])
 write.table(out.dat.immport_behav,file=paste(OUTPUT_DIR,'out.dat.immport_behav.txt',sep='/'))
 ```
 
@@ -147,7 +156,7 @@ out.dat.immport_wincorr=est_bivariate_arima_model(immport,wincorr,spacing='1 wee
 ```
 
 ```{r  results="asis"}
-kable(out.dat.immport_wincorr[out.dat.immport_wincorr$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.immport_wincorr[out.dat.immport_wincorr$pval_bh<fdr_thresh,])
 write.table(out.dat.immport_wincorr,file=paste(OUTPUT_DIR,'out.dat.immport_wincorr.txt',sep='/'))
 ```
 
@@ -158,7 +167,7 @@ out.dat.food_immport=est_bivariate_arima_model(food,immport,spacing='1 week')
 ```
 
 ```{r  results="asis"}
-kable(out.dat.food_immport[out.dat.food_immport$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.food_immport[out.dat.food_immport$pval_bh<fdr_thresh,])
 write.table(out.dat.food_immport,file=paste(OUTPUT_DIR,'out.dat.food_immport.txt',sep='/'))
 ```
 
@@ -169,7 +178,7 @@ out.dat.immport_metab=est_bivariate_arima_model(immport,metab,spacing='1 week')
 ```
 
 ```{r  results="asis"}
-kable(out.dat.immport_metab[out.dat.immport_metab$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.immport_metab[out.dat.immport_metab$pval_bh<fdr_thresh,])
 write.table(out.dat.immport_metab,file=paste(OUTPUT_DIR,'out.dat.immport_metab.txt',sep='/'))
 ```
 
@@ -182,9 +191,22 @@ out.dat.food_metab=est_bivariate_arima_model(food,metab,spacing='1 week')
 ```
 
 ```{r  results="asis"}
-kable(out.dat.food_metab[out.dat.food_metab$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.food_metab[out.dat.food_metab$pval_bh<fdr_thresh,])
 write.table(out.dat.food_metab,file=paste(OUTPUT_DIR,'out.dat.food_metab.txt',sep='/'))
 ```
+
+#### food vs. metabolism (individual metabolites)
+note: food needs to be X variable because auto.arima doesn't handle binary Y variable
+```{r message=FALSE,warning=FALSE,error=FALSE}
+
+out.dat.food_metab_full=est_bivariate_arima_model(food,metab_full,spacing='1 week')
+```
+
+```{r  results="asis"}
+kable_wrap(out.dat.food_metab_full[out.dat.food_metab_full$pval_bh<fdr_thresh,])
+write.table(out.dat.food_metab_full,file=paste(OUTPUT_DIR,'out.dat.food_metabfull.txt',sep='/'))
+```
+
 
 #### behav vs. metabolsm
 ```{r message=FALSE,warning=FALSE,error=FALSE}
@@ -193,9 +215,21 @@ out.dat.behav_metab=est_bivariate_arima_model(behav_keep_no_tth,metab,spacing='1
 ```
 
 ```{r  results="asis"}
-kable(out.dat.behav_metab[out.dat.behav_metab$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.behav_metab[out.dat.behav_metab$pval_bh<fdr_thresh,])
 write.table(out.dat.behav_metab,file=paste(OUTPUT_DIR,'out.dat.behav_metab.txt',sep='/'))
 ```
+
+#### behav vs. metabolsm (full set)
+```{r message=FALSE,warning=FALSE,error=FALSE}
+
+out.dat.behav_metab_full=est_bivariate_arima_model(behav_keep_no_tth,metab_full,spacing='1 week')
+```
+
+```{r  results="asis"}
+kable_wrap(out.dat.behav_metab_full[out.dat.behav_metab_full$pval_bh<fdr_thresh,])
+write.table(out.dat.behav_metab_full,file=paste(OUTPUT_DIR,'out.dat.behav_metabfull.txt',sep='/'))
+```
+
 
 ####metabolism vs. within-network connectivity
 ```{r message=FALSE,warning=FALSE,error=FALSE}
@@ -204,8 +238,19 @@ out.dat.metab_wincorr=est_bivariate_arima_model(metab,wincorr,spacing='1 week')
 ```
 
 ```{r  results="asis"}
-kable(out.dat.metab_wincorr[out.dat.metab_wincorr$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.metab_wincorr[out.dat.metab_wincorr$pval_bh<fdr_thresh,])
 write.table(out.dat.metab_wincorr,file=paste(OUTPUT_DIR,'out.dat.metab_wincorr.txt',sep='/'))
+```
+
+####metabolism vs. within-network connectivity (full set of metabolites)
+```{r message=FALSE,warning=FALSE,error=FALSE}
+
+out.dat.metab_full_wincorr=est_bivariate_arima_model(metab_full,wincorr,spacing='1 week')
+```
+
+```{r  results="asis"}
+kable_wrap(out.dat.metab_full_wincorr[out.dat.metab_full_wincorr$pval_bh<fdr_thresh,])
+write.table(out.dat.metab_full_wincorr,file=paste(OUTPUT_DIR,'out.dat.metab_full_wincorr.txt',sep='/'))
 ```
 
 
@@ -217,7 +262,7 @@ out.dat.wincorr_wincorr=est_bivariate_arima_model(wincorr,wincorr,skip_ident=TRU
 ```
 
 ```{r  results="asis"}
-kable(out.dat.wincorr_wincorr[out.dat.wincorr_wincorr$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.wincorr_wincorr[out.dat.wincorr_wincorr$pval_bh<fdr_thresh,])
 write.table(out.dat.wincorr_wincorr,file=paste(OUTPUT_DIR,'out.dat.wincorr_wincorr.txt',sep='/'))
 ```
 
@@ -230,7 +275,7 @@ out.dat.food_wincorr=est_bivariate_arima_model(food,wincorr)
 ```
 
 ```{r  results="asis"}
-kable(out.dat.food_wincorr[out.dat.food_wincorr$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.food_wincorr[out.dat.food_wincorr$pval_bh<fdr_thresh,])
 write.table(out.dat.food_wincorr,file=paste(OUTPUT_DIR,'out.dat.food_wincorr.txt',sep='/'))
 ```
 
@@ -246,7 +291,7 @@ out.dat.food_behav=est_bivariate_arima_model(food,behav_keep_no_tth)
 ```
 
 ```{r  results="asis"}
-kable(out.dat.food_behav[out.dat.food_behav$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.food_behav[out.dat.food_behav$pval_bh<fdr_thresh,])
 write.table(out.dat.food_behav,file=paste(OUTPUT_DIR,'out.dat.food_behav.txt',sep='/'))
 ```
 
@@ -257,7 +302,7 @@ out.dat.fd.behav=est_bivariate_arima_model(fd,behav_keep)
 ```
 
 ```{r  results="asis"}
-kable(out.dat.fd.behav[out.dat.fd.behav$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.fd.behav[out.dat.fd.behav$pval_bh<fdr_thresh,])
 write.table(out.dat.fd.behav,file=paste(OUTPUT_DIR,'out.dat.fd_behav.txt',sep='/'))
 ```
 
@@ -267,7 +312,7 @@ out.dat.fd.rnaseq=est_bivariate_arima_model(fd,rnaseq_wgcna,spacing='1 week')
 ```
 
 ```{r  results="asis"}
-kable(out.dat.fd.rnaseq[out.dat.fd.rnaseq$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.fd.rnaseq[out.dat.fd.rnaseq$pval_bh<fdr_thresh,])
 
 write.table(out.dat.fd.behav,file=paste(OUTPUT_DIR,'out.dat.fd_wgcna.txt',sep='/'))
 ```
@@ -278,7 +323,7 @@ out.dat.fd.metab=est_bivariate_arima_model(fd,metab,spacing='1 week')
 ```
 
 ```{r  results="asis"}
-kable(out.dat.fd.metab[out.dat.fd.metab$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.fd.metab[out.dat.fd.metab$pval_bh<fdr_thresh,])
 write.table(out.dat.fd.behav,file=paste(OUTPUT_DIR,'out.dat.fd_metab.txt',sep='/'))
 ```
 
@@ -288,7 +333,7 @@ out.dat.fd.wincorr=est_bivariate_arima_model(fd,wincorr)
 ```
 
 ```{r  results="asis"}
-kable(out.dat.fd.wincorr[out.dat.fd.wincorr$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.fd.wincorr[out.dat.fd.wincorr$pval_bh<fdr_thresh,])
 write.table(out.dat.fd.wincorr,file=paste(OUTPUT_DIR,'out.dat.fd_wincorr.txt',sep='/'))
 ```
 
@@ -302,7 +347,7 @@ out.dat.wgcna_wgcna=est_bivariate_arima_model(rnaseq_wgcna, rnaseq_wgcna,spacing
 ```
 
 ```{r  results="asis"}
-kable(out.dat.wgcna_wgcna[out.dat.wgcna_wgcna$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.wgcna_wgcna[out.dat.wgcna_wgcna$pval_bh<fdr_thresh,])
 write.table(out.dat.wgcna_wgcna,file=paste(OUTPUT_DIR,'out.dat.wgcna_wgcna.txt',sep='/'))
 ```
 
@@ -313,7 +358,7 @@ out.dat.wgcna_metab=est_bivariate_arima_model(rnaseq_wgcna,metab,spacing='1 week
 ```
 
 ```{r  results="asis"}
-kable(out.dat.wgcna_metab[out.dat.wgcna_metab$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.wgcna_metab[out.dat.wgcna_metab$pval_bh<fdr_thresh,])
 write.table(out.dat.wgcna_metab,file=paste(OUTPUT_DIR,'out.dat.wgcna_metab.txt',sep='/'))
 ```
 
@@ -326,7 +371,7 @@ out.dat.wgcna_food=est_bivariate_arima_model(food,rnaseq_wgcna,spacing='1 week')
 ```
 
 ```{r  results="asis"}
-kable(out.dat.wgcna_food[out.dat.wgcna_food$pval_bh<fdr_thresh,])
+kable_wrap(out.dat.wgcna_food[out.dat.wgcna_food$pval_bh<fdr_thresh,])
 write.table(out.dat.wgcna_food,file=paste(OUTPUT_DIR,'out.dat.food_wgcna.txt',sep='/'))
 ```
 
